--- a/my-project/src/css/main.scss
+++ b/my-project/src/css/main.scss
@@ -1,6 +1,264 @@
-$red: green;
-.test{
-  .x{
-    color: $red;
+$color-gray: #303030;
+$color-dark-gray: #2a2d32;
+$color-light-gray: #646874;
+$color-lightest-gray: #898d98;
+$color-orange: #c49561;
+$color-lightest-orange: #fffad1;
+$color-light-orange: #fe9e23;
+$color-orange-css: #b18c5f;
+$color-orange-icon: #df840f;
+$color-dark-orange: #cd7400;
+$color-white: #ffffff;
+$color-black: #0b0c10;
+
+$border-radius-value: 2px;
+html{
+  height:100%;
+  width: 100%
+}
+body{
+  font-family: 'Open Sans', sans-serif;
+  height:100%;
+  width: 100%;
+  padding:0;
+  margin:0;
+  position:relative;
+  display: flex;
+  flex-direction: column;
+  transition: all 3s;
+}
+.header{
+  padding: 16px;
+  background: $color-black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: $color-white;
+  .image-box{
+    .image-link{
+      background: $color-gray;
+      padding: 15px;
+      border-radius: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      .image2{
+        display: none;
+      }
+      &:hover{
+        cursor: pointer;
+        background: $color-orange-icon;
+        .image2{
+          display: block;
+        }
+        .image1{
+          display: none;
+        }
+      }
+    }
   }
+  .task{
+    font-size: 35px;
+  }
+  .my-data{
+    font-size: 35px;
+    text-align: end;
+  }
+}
+.wrapper{
+  background: $color-gray;
+  padding: 80px 20px 20px 20px;
+  color: $color-white;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  h1{
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-weight: 100;
+    padding-bottom: 100px;
+    &::after{
+      content: "";
+      display: block;
+      text-align: center;
+      margin-top: 20px;
+      width: 170px;
+      height: 1px;
+      background: $color-white;
+    }
+  }
+  .block-box{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    .title-box{
+      text-align: center;
+      padding-bottom: 70px;
+      font-weight: 600;
+    }
+    .radio-box{
+      display: flex;
+      align-items: center;
+      padding-bottom: 25px;
+      .fa-regular{
+        font-size: 30px;
+        padding-right: 20px;
+        cursor: pointer;
+      }
+      label{
+        cursor: pointer;
+      }
+    }
+    .button-box{
+      display: flex;
+      justify-content: center;
+      .button-replace{
+        margin-right: 40px;
+      }
+      .button-replace, .button-add{
+        border: 1px solid $color-white;
+        width: 180px;
+        height: 50px;
+        &:hover{
+          border: 1px solid $color-lightest-orange;
+          background-image: linear-gradient(to bottom right, $color-dark-orange, $color-light-orange);
+          color: $color-white;
+        }
+      }
+    }
+    .box-second{
+      padding: 0 20px;
+    }
+  }
+}
+footer{
+  background: $color-black;
+  color: $color-white;
+  position: relative;
+  //position:absolute;
+  //bottom:0;
+  width:100%;
+  .footer{
+    padding: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    .css-is-awesome{
+      transition: all 2s;
+      width: 55px;
+      padding: 5px;
+      color: $color-dark-gray;
+      border: 1px solid $color-dark-gray;
+      transform: rotate(0deg);
+      &:hover{
+        border: 1px solid $color-orange-css;
+        color: $color-lightest-gray;
+        cursor: pointer;
+        transform: rotate(360deg);
+        .text{
+          transform: rotate(-360deg);
+        }
+      }
+      .text{
+        transform: rotate(0deg);
+        transition: transform 2s;
+      }
+    }
+
+    .logo{
+      color: $color-dark-gray;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 20px;
+      &::after, &::before{
+        content: "";
+        width: 50px;
+        height: 1px;
+        background: $color-dark-gray;
+      }
+      &::after{
+        margin-left: 5px;
+      }
+      &::before{
+        margin-right: 5px;
+      }
+    }
+    .show-box{
+      display: flex;
+      align-items: center;
+      justify-content: end;
+    }
+  }
+}
+.list-box{
+  transition: all 2s;
+  display: none;
+  justify-content: start;
+  position: absolute;
+  top: -92px;
+  background: $color-white;
+  color: $color-black;
+  padding-left: 25px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width: 245px;
+  border-radius: $border-radius-value;
+  box-shadow: $color-black 0px 8px 24px, $color-black 0px 16px 56px, $color-black 0px 24px 80px;
+  //visibility: hidden;
+  .clear-data{
+    transition: all 2s;
+    cursor: pointer;
+    margin-bottom: 8px;
+    font-size: 16px;
+    &:hover{
+      color: $color-orange;
+    }
+  }
+  .show-data{
+    transition: all 2s;
+    font-size: 16px;
+    cursor: pointer;
+    &:hover{
+      color: $color-orange;
+    }
+  }
+  .fa-chevron-right{
+    padding-right: 10px;
+  }
+}
+.show-button{
+  width: 270px;
+  height: 50px;
+  i{
+    padding-left: 16px;
+  }
+  &:hover{
+    color: $color-white;
+    border: 1px solid $color-white;
+  }
+}
+.input-show-button{
+  transition: all 2s;
+}
+.input-show-button:checked + .show-button + .list-box {
+  //visibility: visible;
+  display: flex;
+}
+.my-button{
+  transition: all 1s;
+  background: transparent;
+  color: $color-light-gray;
+  cursor: pointer;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid $color-light-gray;
+  font-weight: bold;
+  font-size: 16px;
+  border-radius: $border-radius-value;
 }
